started adding PreAuthorize to endpoints